@@ -1,4 +1,4 @@
-Date: 2025-07-25
+Date: 2025-08-01
 Package: CHNOSZ
 Version: 2.2.0-3
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
